--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Expensify</title>
-		<link rel="stylesheet" href="./styles.css" type="text/css" />
+		<link rel="stylesheet" href="/dist/styles.css" type="text/css" />
 	</head>
 	<body>
 		<div id="app"></div>
-		<script src="/bundle.js"></script>
+		<script src="/dist/bundle.js"></script>
 	</body>
 </html>
